# ferret

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/design/: fzf-interface.md  indexing-system.md  mcp-interface.md  multi-repo.md  risks-and-tradeoffs.md  web-interface.md
docs/plans/: 2026-02-27-bounded-compaction.md  2026-02-27-ci-pipeline.md  2026-02-27-cli-skeleton.md  2026-02-27-content-store.md  2026-02-27-crash-recovery.md  2026-02-27-file-watcher.md  2026-02-27-foundational-types.md  2026-02-27-git-change-detection.md  2026-02-27-hybrid-change-detector.md  2026-02-27-m4-ascii-casefold-trigrams.md  2026-02-27-m4-candidate-verification.md  2026-02-27-m4-query-parser.md  2026-02-27-m4-query-planner.md  2026-02-27-m4-result-formatting.md  2026-02-27-m4-result-ranking.md  2026-02-27-m4-trigram-query-extraction.md  2026-02-27-metadata-index.md  2026-02-27-multi-segment-query.md  2026-02-27-segment-manager.md  2026-02-27-segment-writer.md  2026-02-27-tombstone-bitmap.md  2026-02-27-trigram-extraction-and-posting-lists.md  2026-02-27-varint-codec.md  2026-02-27-workspace-and-deps.md  2026-02-28-daemon-indexing-service.md  2026-02-28-early-termination-result-budget.md  2026-02-28-parallel-cross-segment-search.md  2026-03-01-daemon-end-to-end-streaming.md  2026-03-01-parallel-init-phases.md  (+8 more)
ferret-core/: Cargo.toml
indexrs-cli/: Cargo.toml
indexrs-core/: Cargo.toml
indexrs-mcp/: Cargo.toml
indexrs-mcp/src/: daemon_client.rs  errors.rs  formatter.rs  main.rs  resources.rs  server.rs
indexrs-web/: Cargo.toml
(+99 files in other folders)
